kubernetes/apps/base/game-servers/minecraft/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: minecraft-dynmap
  namespace: game-servers
  annotations:
    external-dns.alpha.kubernetes.io/target: 'external.${CLUSTER_DOMAIN}'
    external-dns.alpha.kubernetes.io/external: 'true'
spec:
  parentRefs:
    - name: external
      namespace: kube-system
      sectionName: https
  hostnames:
    - 'dynmap.${CLUSTER_DOMAIN}'
  rules:
    - backendRefs:
        - name: minecraft
          port: 8123
          weight: 100
